make sure query list doesn't overflow at the bottom

--- a/src/components/QueryList.scss
+++ b/src/components/QueryList.scss
@@ -27,6 +27,16 @@
                     & > .ant-table-container {
                         height: 100%;
                         overflow: hidden;
+                        display: flex;
+                        flex-direction: column;
+
+                        & > .ant-table-header {
+                            flex: none;
+                        }
+                        & > .ant-table-body {
+                            flex: 1;
+                            min-height: 0;
+                        }
                     }
                 }
             }
